<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#74d7b1"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scroll View"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="25sp"
            android:textColor="#c1384c"/>

    <EditText
       style="@style/customEdittext"
        android:hint="@string/Enter_the_name"/>
    <EditText
      style="@style/customEdittext"
        android:hint="@string/enter_the_id_hint" />
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_phone_number" />
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_date_of_birth_hint" />
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_district" />
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_state" />
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_blood_group" />



</LinearLayout>

</ScrollView>